--- a/MiniLaunch.WPFApp/MainWindow.xaml
+++ b/MiniLaunch.WPFApp/MainWindow.xaml
@@ -16,8 +16,6 @@
                     <RowDefinition Height="*" />
                     <RowDefinition Height="2.5" />
                     <RowDefinition Height="25" />
-                    <RowDefinition Height="2.5" />
-                    <RowDefinition Height="25" />
                 </Grid.RowDefinitions>
                 <Button x:Name="AddAccountButton" Grid.Row="0" FontSize="14" Content="Add Account" Click="AddAccountButton_Click" />
                 <ListBox x:Name="AccountListBox" Grid.Row="2" FontSize="11" SelectionMode="Single" SelectionChanged="AccountListBox_SelectionChanged">
@@ -39,8 +37,15 @@
                         </ContextMenu>
                     </ListBox.ContextMenu>
                 </ListBox>
-                <ComboBox x:Name="ServerDropdown" Grid.Row="4" />
-                <Button x:Name="LaunchButton" Grid.Row="6" Content="Launch" Click="LaunchButton_Click" />
+                <Grid Grid.Row="5">
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="*" />
+                        <ColumnDefinition Width="2.5" />
+                        <ColumnDefinition Width="*" />
+                    </Grid.ColumnDefinitions>
+                    <ComboBox x:Name="ServerDropdown" Grid.Column="0" />
+                    <Button x:Name="LaunchButton" Grid.Column="2" Content="Launch" IsEnabled="False" Click="LaunchButton_Click" />
+                </Grid>
             </Grid>
         </TabItem>
         <TabItem x:Name="SettingsTab" Header="Settings" IsEnabled="False">
