--- a/MiniLaunch.WPFApp/MainWindow.xaml
+++ b/MiniLaunch.WPFApp/MainWindow.xaml
@@ -1,24 +1,31 @@
-﻿<Window x:Class="MiniLaunch.WPFApp.MainWindow"
+<Window x:Class="MiniLaunch.WPFApp.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:MiniLaunch.WPFApp"
+        xmlns:settings="clr-namespace:MiniLaunch.WPFApp.Properties"
         mc:Ignorable="d"
-        Title="DDO MiniLaunch" Height="450" Width="300"
-        ResizeMode="NoResize">
+        Title="DDO MiniLaunch"
+        MinHeight="200" MinWidth="280"
+        Height="{Binding MainHeight, Source={x:Static settings:Settings.Default}, Mode=TwoWay}"
+        Width="{Binding MainWidth, Source={x:Static settings:Settings.Default}, Mode=TwoWay}"
+        Top="{Binding MainTop, Source={x:Static settings:Settings.Default}, Mode=TwoWay}"
+        Left="{Binding MainLeft, Source={x:Static settings:Settings.Default}, Mode=TwoWay}"
+        LocationChanged="Window_LocationChanged"
+        SizeChanged="Window_SizeChanged">
     <TabControl Margin="1">
         <TabItem x:Name="AccountsTab" Header="Accounts">
             <Grid Margin="3">
                 <Grid.RowDefinitions>
-                    <RowDefinition Height="25" />
-                    <RowDefinition Height="2.5" />
+                    <RowDefinition Height="27.5" />
+                    <RowDefinition Height="2.75" />
                     <RowDefinition Height="*" />
-                    <RowDefinition Height="2.5" />
-                    <RowDefinition Height="25" />
+                    <RowDefinition Height="2.75" />
+                    <RowDefinition Height="27.5" />
                 </Grid.RowDefinitions>
-                <Button x:Name="AddAccountButton" Grid.Row="0" FontSize="14" Content="Add Account" Click="AddAccountButton_Click" />
-                <ListBox x:Name="AccountListBox" Grid.Row="2" FontSize="11" SelectionMode="Single" SelectionChanged="AccountListBox_SelectionChanged">
+                <Button x:Name="AddAccountButton" Grid.Row="0" FontSize="16" Content="Add Account" Click="AddAccountButton_Click" />
+                <ListBox x:Name="AccountListBox" Grid.Row="2" FontSize="14" SelectionMode="Single" SelectionChanged="AccountListBox_SelectionChanged">
                     <ListBox.ItemTemplate>
                         <DataTemplate>
                             <TextBlock>
@@ -43,8 +50,8 @@
                         <ColumnDefinition Width="2.5" />
                         <ColumnDefinition Width="*" />
                     </Grid.ColumnDefinitions>
-                    <ComboBox x:Name="ServerDropdown" Grid.Column="0" DisplayMemberPath="Name" SelectionChanged="ServerDropdown_SelectionChanged" />
-                    <Button x:Name="LaunchButton" Grid.Column="2" Content="Launch" IsEnabled="False" Click="LaunchButton_Click" />
+                    <ComboBox x:Name="ServerDropdown" Grid.Column="0" FontSize="14" DisplayMemberPath="Name" SelectionChanged="ServerDropdown_SelectionChanged" />
+                    <Button x:Name="LaunchButton" Grid.Column="2" FontSize="14" Content="Launch" IsEnabled="False" Click="LaunchButton_Click" />
                 </Grid>
             </Grid>
         </TabItem>
