add "auto" update support
does not check for updates on its own, will update for you though

--- a/MiniLaunch.WPFApp/MainWindow.xaml
+++ b/MiniLaunch.WPFApp/MainWindow.xaml
@@ -68,7 +68,8 @@
                 <CheckBox Content="Use 64-bit game client" VerticalAlignment="Center" x:Name="Use64BitCheckBox" IsChecked="{Binding Use64Bit}" Click="Use64BitCheckBox_Click" />
                 <StackPanel Grid.Row="5" Orientation="Horizontal" HorizontalAlignment="Center">
                     <Button x:Name="SourceCodeButton" Content="Source Code" Margin="10 0 5 0" Padding="5 0" Click="SourceCodeButton_Click" />
-                    <Button x:Name="DownloadsButton" Content="Releases" Margin="5 0 10 0" Padding="5 0" Click="DownloadsButton_Click" />
+                    <Button x:Name="DownloadsButton" Content="Releases" Margin="5 0 5 0" Padding="5 0" Click="DownloadsButton_Click" />
+                    <Button x:Name="UpdateButton" Content="Update" Margin="5 0 10 0" Padding="5 0" Click="UpdateButton_Click" />
                 </StackPanel>
             </Grid>
         </TabItem>
