--- a/MiniLaunch.WPFApp/MainWindow.xaml
+++ b/MiniLaunch.WPFApp/MainWindow.xaml
@@ -58,6 +58,8 @@
         <TabItem x:Name="SettingsTab" Header="Settings">
             <Grid Margin="3">
                 <Grid.RowDefinitions>
+                    <RowDefinition Height="50" />
+                    <RowDefinition Height="25" />
                     <RowDefinition Height="25" />
                     <RowDefinition Height="25" />
                     <RowDefinition Height="25" />
@@ -65,9 +67,27 @@
                     <RowDefinition Height="*" />
                     <RowDefinition Height="25" />
                 </Grid.RowDefinitions>
-                <CheckBox Grid.Row="0" Content="Use 64-bit game client" VerticalAlignment="Center" x:Name="Use64BitCheckBox" IsChecked="{Binding Use64Bit}" Click="Use64BitCheckBox_Click" />
-                <CheckBox Grid.Row="1" Content="Enable preview (Lamannia)" VerticalAlignment="Center" x:Name="EnablePreviewCheckBox" IsChecked="{Binding EnablePreview}" Click="EnablePreviewCheckBox_Click" />
-                <StackPanel Grid.Row="5" Orientation="Horizontal" HorizontalAlignment="Center">
+                <Grid Grid.Row="0">
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="100" />
+                        <ColumnDefinition Width="*" />
+                        <ColumnDefinition Width="50" />
+                    </Grid.ColumnDefinitions>
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="25" />
+                        <RowDefinition Height="25" />
+                    </Grid.RowDefinitions>
+                    <TextBlock Grid.Column="0" Grid.Row="0" VerticalAlignment="Center" Text="Game directory:" />
+                    <TextBox x:Name="GameDirTextBox" Grid.Column="1" Grid.Row="0" VerticalAlignment="Center" Height="22" IsReadOnly="True" Text="{Binding GameDirectory}" />
+                    <Button x:Name="ChangeGameDirButton" Grid.Column="2" Grid.Row="0" VerticalAlignment="Center" Height="22" Margin="2.5 0 0 0" Content="Change" />
+
+                    <TextBlock Grid.Column="0" Grid.Row="1" VerticalAlignment="Center" Text="Preview directory:" />
+                    <TextBox x:Name="PreviewGameDirTextBox" Grid.Column="1" Grid.Row="1" VerticalAlignment="Center" Height="22" IsReadOnly="True" Text="{Binding PreviewGameDirectory}" />
+                    <Button x:Name="ChangePreviewGameDirButton" Grid.Column="2" Grid.Row="1" VerticalAlignment="Center" Height="22" Margin="2.5 0 0 0" Content="Change" />
+                </Grid>
+                <CheckBox Grid.Row="1" Content="Use 64-bit game client" VerticalAlignment="Center" x:Name="Use64BitCheckBox" IsChecked="{Binding Use64Bit}" Click="Use64BitCheckBox_Click" />
+                <CheckBox Grid.Row="2" Content="Enable preview (Lamannia)" VerticalAlignment="Center" x:Name="EnablePreviewCheckBox" IsChecked="{Binding EnablePreview}" Click="EnablePreviewCheckBox_Click" />
+                <StackPanel Grid.Row="7" Orientation="Horizontal" HorizontalAlignment="Center">
                     <Button x:Name="SourceCodeButton" Content="Source Code" Margin="10 0 5 0" Padding="5 0" Click="SourceCodeButton_Click" />
                     <Button x:Name="DownloadsButton" Content="Releases" Margin="5 0 5 0" Padding="5 0" Click="DownloadsButton_Click" />
                     <Button x:Name="UpdateButton" Content="Update" Margin="5 0 10 0" Padding="5 0" Click="UpdateButton_Click" />
