--- a/MiniLaunch.WPFApp/MainWindow.xaml
+++ b/MiniLaunch.WPFApp/MainWindow.xaml
@@ -1,4 +1,4 @@
-<Window x:Class="MiniLaunch.WPFApp.MainWindow"
+﻿<Window x:Class="MiniLaunch.WPFApp.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -7,7 +7,7 @@
         xmlns:settings="clr-namespace:MiniLaunch.WPFApp.Properties"
         mc:Ignorable="d"
         Title="DDO MiniLaunch"
-        MinHeight="200" MinWidth="290"
+        MinHeight="210" MinWidth="300"
         Height="{Binding MainHeight, Source={x:Static settings:Settings.Default}, Mode=TwoWay}"
         Width="{Binding MainWidth, Source={x:Static settings:Settings.Default}, Mode=TwoWay}"
         Top="{Binding MainTop, Source={x:Static settings:Settings.Default}, Mode=TwoWay}"
@@ -59,6 +59,7 @@
             <Grid Margin="3">
                 <Grid.RowDefinitions>
                     <RowDefinition Height="50" />
+                    <RowDefinition Height="20" />
                     <RowDefinition Height="25" />
                     <RowDefinition Height="25" />
                     <RowDefinition Height="*" />
@@ -82,18 +83,30 @@
                     <TextBox x:Name="PreviewGameDirTextBox" Grid.Column="1" Grid.Row="1" VerticalAlignment="Center" Height="22" IsReadOnly="True" Text="{Binding PreviewGameDirectory}" />
                     <Button x:Name="ChangePreviewGameDirButton" Grid.Column="2" Grid.Row="1" VerticalAlignment="Center" Height="22" Margin="2.5 0 0 0" Content="Change" Click="ChangePreviewGameDirButton_Click" />
                 </Grid>
-                <CheckBox Grid.Row="1" Content="Use 64-bit game client" VerticalAlignment="Center" x:Name="Use64BitCheckBox" IsChecked="{Binding Use64Bit}" Click="Use64BitCheckBox_Click" />
-                <CheckBox Grid.Row="2" Content="Enable preview (Lamannia)" VerticalAlignment="Center" x:Name="EnablePreviewCheckBox" IsChecked="{Binding EnablePreview}" Click="EnablePreviewCheckBox_Click" />
+                <CheckBox Grid.Row="2" Content="Use 64-bit game client" VerticalAlignment="Center" x:Name="Use64BitCheckBox" IsChecked="{Binding Use64Bit}" Click="Use64BitCheckBox_Click" />
+                <CheckBox Grid.Row="3" Content="Enable preview (Lamannia)" VerticalAlignment="Center" x:Name="EnablePreviewCheckBox" IsChecked="{Binding EnablePreview}" Click="EnablePreviewCheckBox_Click" />
             </Grid>
         </TabItem>
         <TabItem x:Name="AboutTab" Header="About">
             <Grid Margin="3">
                 <Grid.RowDefinitions>
-                    <RowDefinition Height="25" />
+                    <RowDefinition Height="23" />
+                    <RowDefinition Height="42" />
                     <RowDefinition Height="*" />
-                    <RowDefinition Height="25" />
+                    <RowDefinition Height="23" />
                 </Grid.RowDefinitions>
-                <StackPanel Grid.Row="2" Orientation="Horizontal" HorizontalAlignment="Center">
+                <TextBlock Grid.Row="0" Margin="5" x:Name="AboutVersionTextBlock" />
+                <TextBlock Grid.Row="1" Margin="5">
+                    Copyright © 2021 ashakoor.
+                    <LineBreak />
+                    Released under the AGPL v3.0.
+                </TextBlock>
+                <TextBlock TextWrapping="Wrap" Grid.Row="2" Margin="5">
+                    Dungeons &amp; Dragons Online
+                    <LineBreak />
+                    © 2017 Standing Stone Games LLC.
+                </TextBlock>
+                <StackPanel Grid.Row="3" Orientation="Horizontal" HorizontalAlignment="Center">
                     <Button x:Name="SourceCodeButton" Content="Source Code" Margin="10 0 5 0" Padding="5 0" Click="SourceCodeButton_Click" />
                     <Button x:Name="DownloadsButton" Content="Releases" Margin="5 0 5 0" Padding="5 0" Click="DownloadsButton_Click" />
                     <Button x:Name="UpdateButton" Content="Update" Margin="5 0 10 0" Padding="5 0" Click="UpdateButton_Click" />
